# inteligencia-mantenimiento-ferroviario-cbm

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  index.html  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/: dependabot.yml
configs/: README.md
docs/: backlog_metric_governance.md  capacity_optimization.md  centro-control-mantenimiento-ferroviario.html  dashboard_design.md  data_contracts.md  decision_governance.md  diccionario_datos.md  diccionario_metricas.md  feature_dictionary.md  framework_scoring.md  gobierno_metricas.md  health_degradation_semantics.md  index.html  inspection_analytics_framework.md  maintenance_strategy_comparison.md  maintenance_strategy_comparison_framework.md  memo_ejecutivo_es.md  metodologia.md  metric_contracts.md  metric_lineage.md  model_monitoring.md  modeling_framework.md  notebook_strategy.md  production_readiness.md  recommendation_decision_logic.md  release_discipline.md  repo_architecture.md  reporting_governance.md  reproducibility.md  rul_framework.md  scheduling_framework.md  score_calibration_hardening.md  security_dependency_hygiene.md  sql_architecture.md  sql_metric_definitions.md  supuestos_modelo.md  validation_framework.md
notebooks/: 01_exploracion_y_auditoria.ipynb  02_degradacion_riesgo_rul.ipynb  03_priorizacion_y_planificacion.ipynb  04_estrategias_y_diferimiento.ipynb  priorizacion_y_scheduling_taller.ipynb
outputs/: README.md
scripts/: build_publication_outputs.py  build_report_pdf.py  check_lock_drift.py  make_graphs.py  run_coverage.sh  run_pipeline.sh  run_tests.sh
sql/: 01_staging_assets.sql  02_marts.sql  02_staging_sensors.sql  03_staging_maintenance.sql  04_integrated_component_health.sql  04_validation_queries.sql  05_integrated_failures_and_alerts.sql  06_integrated_availability.sql  07_analytical_mart_component_day.sql  08_analytical_mart_unit_day.sql  09_analytical_mart_fleet_week.sql  10_kpi_queries.sql  11_validation_queries.sql
src/: __init__.py  advanced_analysis.py  build_dashboard.py  config.py  data_profile_audit.py  early_warning.py  explore_data_audit.py  impact_analysis.py  (+21 more)
(+79 files in other folders)
