[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "railway-maintenance-intelligence"
version = "1.0.0"
description = "Sistema reproducible de decisión para mantenimiento ferroviario basado en condición."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Miguel Fidalgo Martins", email = "mfidalgomartins@gmail.com" },
]
keywords = ["railway", "condition-based-maintenance", "decision-analytics", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "duckdb>=1.1.0",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pikepdf>=9.0.0",
    "scipy>=1.14.0",
    "tabulate>=0.9.0",
    "weasyprint>=68.0",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
]

[project.scripts]
railway-cbm = "railway_cbm.cli:main"

[project.urls]
Homepage = "https://mfidalgomartins.github.io/inteligencia-mantenimiento-ferroviario-cbm/"
Repository = "https://github.com/mfidalgomartins/inteligencia-mantenimiento-ferroviario-cbm"
Issues = "https://github.com/mfidalgomartins/inteligencia-mantenimiento-ferroviario-cbm/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ARG", "C4", "PERF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/railway_cbm/rul_estimation.py" = ["E402"]

[tool.coverage.run]
branch = true
source = ["railway_cbm"]
omit = ["src/railway_cbm/notebooks_builder.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
]
